Kubernetes-manifests/namespace.yaml
# namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops-prod
  labels:
    env: production
    team: devops
