Kubernetes-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-app-service
spec:
  selector:
    app: devops-app
  ports:
  - port: 80
    targetPort: 3000 
  type: LoadBalancer
